# plugin_framewok

./: CMakeLists.txt  README.md  framework.hpp  main.cpp
